--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "analyze": "set ANALYZE=true && next build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@next/bundle-analyzer": "^16.1.3",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
@@ -17,6 +19,7 @@
     "lucide-react": "^0.562.0",
     "mysql2": "^3.16.0",
     "next": "16.1.1",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
