--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
+    "slug": "^11.0.1",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6"
